--- a/app/assets/stylesheets/mixins/default-colors.scss
+++ b/app/assets/stylesheets/mixins/default-colors.scss
@@ -54,6 +54,13 @@ $red:         hsl($error-hue, 73.4%, 38.2%);
 $error-red:   hsl($error-hue, 73.4%, 45.2%);
 $yellow:      #D1C905;
 
+// bootstrap colors
+$bootstrap-primary: #337ab7;
+$bootstrap-success: #5cb85c;
+$bootstrap-info:    #5bc0de;
+$bootstrap-warning: #f0ad4e;
+$bootstrap-danger:  #d9534f;
+
 $cover-photo-url: "/assets/cover_photos/header/default.jpg";
 $small-cover-photo-url: "/assets/cover_photos/header/default.jpg";
 $wide-logo-lowres-url: "/assets/logos/full/default.png";
